# hackaton_alabuga

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
src/: main.py
src/api/: app.py  boundary.py  exceptions.py  openapi.py  routers.py
src/api/artifacts/: endpoints.py  schemas.py
src/api/auth/: schemas.py
src/api/common/: endpoints.py
src/api/competencies/: endpoints.py  schemas.py
src/api/competitions/: __init__.py  endpoints.py  schemas.py
src/api/media/: endpoints.py  schemas.py
src/api/mission_chains/: endpoints.py  schemas.py
src/api/missions/: endpoints.py  schemas.py
src/api/ranks/: endpoints.py  schemas.py
src/api/seasons/: endpoints.py  schemas.py
src/api/skills/: endpoints.py  schemas.py
src/api/store/: endpoints.py  schemas.py
src/api/tasks/: endpoints.py  schemas.py
src/api/users/: endpoints.py  schemas.py
src/clients/: minio.py
src/config/: constants.py  logger.py  settings.py
src/core/: exceptions.py  file_storage.py  password.py  storages.py  use_case.py
src/core/artifacts/: enums.py  exceptions.py  schemas.py  use_cases.py
src/core/competencies/: exceptions.py  schemas.py  use_cases.py
src/core/competitions/: __init__.py  exceptions.py  schemas.py  use_cases.py
src/core/media/: exceptions.py  schemas.py
src/core/mission_chains/: exceptions.py  schemas.py  use_cases.py
src/core/missions/: enums.py  exceptions.py  schemas.py  use_cases.py
src/core/ranks/: exceptions.py  schemas.py  use_cases.py
src/core/seasons/: exceptions.py  schemas.py  use_cases.py
src/core/skills/: exceptions.py  schemas.py  use_cases.py
src/core/store/: exceptions.py  schemas.py  use_cases.py
src/core/tasks/: exceptions.py  schemas.py  use_cases.py
src/core/users/: enums.py  exceptions.py  schemas.py  use_cases.py
src/di/: container.py  providers.py
src/migrations/: alembic.ini  commands.py  env.py
src/migrations/versions/: 0001_add_user_table.py  0002_add_mission_branch_table.py  0003_add_missions_table.py  0004_add_tasks_tables.py  0005_add_artifacts_table.py  0005_add_competitions_table.py  0006_add_competitions_table.py  0006_add_ranks_table.py  0007_add_ranks_table.py  0008_add_skills_table.py  (+21 more)
src/scripts/: seed_data.py
src/services/: minio.py  user_password_service.py
src/storages/: database.py  database_storage.py  models.py
src/tests/: conftest.py  fixtures.py
(+135 files in other folders)
